Updated >> Fix Responsive

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
 
       <!-- Landing Home Donasi -->
       <div
-        class="flex flex-column-reverse items-center md:!ml-20 lg:!ml-20 xl:!ml-20 xl:!mr-0 2xl:mx-40 mt-20 py-15 sm:!text-center md:flex-row md:!text-start md:justify-between xl:pt-20 xl:pb-2 2xl:h-[50vh]">
+        class="flex flex-column-reverse items-center md:!ml-20 lg:!ml-20 xl:!ml-20 xl:!mr-0 2xl:!mx-60 mt-20 py-15 sm:!text-center md:flex-row md:!text-start md:justify-between xl:pt-20 xl:pb-2 2xl:h-[50vh]">
         <div class="flex flex-col items-start gap-5">
           <div>
             <h3 class="lg:tezt-[16px] xl:text-[18px] 2xl:text-[20px] text-[#2d2d2d] font-normal" data-aos="fade-right"
@@ -113,30 +113,30 @@
       <!-- Marquee Animation -->
       <div id="latest-news" class="marquee">
         <span style="white-space: nowrap">
-          <div class="relative left-5 right-14 flex flex-row items-center lg:gap-[30px] xl:gap-[100px] 2xl:gap-[188px]">
+          <div class=" flex flex-row items-center lg:!gap-[30px] xl:!gap-[100px] 2xl:gap-[188px]">
             <a href="https://kitabisa.com" target="_blank"
-              class="relative xl:left-[70px] flex flex-row items-center gap-10 cursor-pointer">
+              class="flex flex-row items-center gap-10 cursor-pointer">
               <img src="../assets/img/logo-lembaga/logo-kitabisa.png" alt="Kitabisa.com" width="50" height="50" />
               <p class="">Kitabisa</p>
             </a>
             <a href="https://digital.dompetdhuafa.org/" target="_blank"
-              class="relative left-5 right-14 flex flex-row items-center gap-10 w-[320px]">
+              class=" flex flex-row items-center gap-10 w-[320px]">
               <img src="../assets/img/logo-lembaga/logo-dompet-dhuafa.png" alt="" width="100" height="100" />
               <p class="lg:w-[240px]">Dompet Dhuafa</p>
             </a>
             <a href="https://ayobantu.com" target="_blank"
-              class="relative left-0 right-14 flex flex-row items-center gap-10">
+              class="flex flex-row items-center gap-10">
               <img class="rounded-full" src="../assets/img/logo-lembaga/logo-ayobantu.png" alt="Ayobantu.com" width="50"
                 height="50" />
               <p class="">Ayobantu</p>
             </a>
             <a href="https://atapkita.com" target="_blank"
-              class="relative left-5 right-14 flex flex-row items-center gap-10">
+              class=" flex flex-row items-center gap-10">
               <img src="../assets/img/logo-lembaga/logo-atapkita.png" alt="Atapkita.com" width="50" height="50" />
               <p class="">Atapkita</p>
             </a>
             <a href="https://baznas.go.id" target="_blank"
-              class="relative left-5 right-14 flex flex-row items-center mr-20">
+              class=" flex flex-row items-center mr-20">
               <img src="../assets/img/logo-lembaga/Logo_BAZNAS.png" alt="Baznas.go.id" width="100" height="100" />
               <p class="">Baznas</p>
             </a>
