--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth overflow-x-hidden">
+<html lang="en" class="scroll-smooth w-full overflow-x-hidden">
 
 <head>
   <meta charset="UTF-8" />
@@ -17,9 +17,9 @@
 </head>
 
 <body>
-  <header>
+  <header class="hidden md:block">
     <nav
-      class="fixed z-20 w-[100%] flex flex-direction-row justify-between items-center sm:px-10 md:px-20 md:py-4 xl: 2xl:px-60 2xl:py-6 bg-[#0D9276]">
+      class=" fixed z-20 w-[100%] flex flex-direction-row justify-between items-center sm:px-10 md:px-20 md:py-4 xl: 2xl:px-60 2xl:py-6 bg-[#0D9276]">
       <h1 class="logo text-white text-[32px]">
         <span class="bg-gradient-to-t from-[#ffffff] to-[#00FF67] bg-clip-text text-transparent">C</span>loubee.
       </h1>
@@ -33,6 +33,31 @@
         </li>
         <li class="cursor-pointer text-white"><a href="#zakat">Zakat</a></li>
         <li class="cursor-pointer text-white"><a href="#faq">Faq</a></li>
+      </ul>
+    </nav>
+  </header>
+  <header class="md:hidden">
+    <nav
+      class="fixed z-20 w-[100%] flex flex-wrap justify-between items-center px-10 py-5 bg-[#0D9276]">
+      <h1 class="logo text-white text-[32px]">
+        <span class="bg-gradient-to-t from-[#ffffff] to-[#00FF67] bg-clip-text text-transparent">C</span>loubee.
+      </h1>
+      <img src="../assets/img/hamburger.svg" id="hamburger" alt="hamburger" class="cursor-pointer md:hidden">
+      <ul id="menu"
+        class="animasi flex flex-col justify-center items-center w-full h-[140dvh] font-bold  absolute top-0 bottom-0 left-0 bg-[#0D9276] gap-10 z-40">
+        <li class="list cursor-pointer text-white"><a href="#">Home</a></li>
+        <li class="list-2 cursor-pointer text-white">
+          <a href="#tentang-kami">Tentang Kami</a>
+        </li>
+        <li class="list-3 cursor-pointer text-white">
+          <a href="#donasi">Donasi</a>
+        </li>
+        <li class="list-4 cursor-pointer text-white"><a href="#zakat">Zakat</a></li>
+        <li class="list-5 cursor-pointer text-white"><a href="#faq">Faq</a></li>
+        <h1 class="logo absolute top-7 left-10 text-white text-[32px]">
+          <span class="bg-gradient-to-t from-[#ffffff] to-[#00FF67] bg-clip-text text-transparent">C</span>loubee.
+        </h1>
+        <span id="close" class="text-[34px] cursor-pointer text-white md:hidden absolute top-2 right-11">X</span>
       </ul>
     </nav>
   </header>
@@ -62,40 +87,61 @@
 
       <!-- Landing Home Donasi -->
       <div
-        class="flex flex-column-reverse items-center md:!ml-20 lg:!ml-20 xl:!ml-20 xl:!mr-0 2xl:!mx-60 mt-20 py-15 sm:!text-center md:flex-row md:!text-start md:justify-between xl:pt-20 xl:pb-2 2xl:h-[50vh]">
-        <div class="flex flex-col items-start gap-5">
+        class="flex flex-col-reverse items-center text-center md:!ml-20 lg:!ml-20 xl:!ml-20 xl:!mr-0 2xl:!mx-40 mt-20 py-15 md:flex-row md:!text-start md:justify-between xl:pt-20 xl:pb-2 2xl:h-[50vh]">
+        <div class="flex flex-col gap-5">
           <div>
-            <h3 class="lg:tezt-[16px] xl:text-[18px] 2xl:text-[20px] text-[#2d2d2d] font-normal" data-aos="fade-right"
-              data-aos-duration="1000">
+            <h3
+              class="text-[12px] md:text-[14px] lg:text-[16px] xl:text-[18px] 2xl:text-[20px] text-[#2d2d2d] font-light"
+              data-aos="fade-right" data-aos-duration="1000">
               Selamat datang di website kami
             </h3>
-            <h1 class="judul lg:text-[28px] xl:text-[32px] 2xl:text-[40px]" data-aos="fade" data-aos-duration="1500">
+            <h1 class="judul hidden md:block md:text-[24px] lg:text-[28px] xl:text-[32px] 2xl:text-[40px]"
+              data-aos="fade" data-aos-duration="1500">
               DONASI BAGI <br />
               ORANG YANG <br />
               <span class="text-[#0D9276]" data-aos="fade" data-aos-duration="3000">MEMBUTUHKAN</span>
             </h1>
+            <div class="flex flex-col items-center">
+              <h1 class="judul w-[60%] text-[24px] md:hidden" data-aos="fade" data-aos-duration="1500">
+                DONASI BAGI
+                ORANG YANG <br>
+                <span class="text-[#0D9276]" data-aos="fade" data-aos-duration="3000">MEMBUTUHKAN</span>
+              </h1>
+            </div>
           </div>
-          <p class="text-[#2d2d2d] font-light md:w-[300px] lg:w-[350px] xl:w-[400px] 2xl:text-[20px] 2xl:w-[530px]"
-            data-aos="fade-left" data-aos-duration="1500">
-            Cloubee menyediakan fitur untuk membuka donasi bagi mereka yang
-            membutuhkan melalui platform yang tersedia dan terpercaya.
-          </p>
-          <button
-            class="btn btn-shadow font-thin text-white md:py-2 md:px-6 2xl:py-4 2xl:px-8 bg-[#0D9276] rounded-2xl cursor-pointer btn-shadow:hover hover:bg-black hover:color-white hover:scale-105 hover:shadow-xl"
-            data-aos="fade-up" data-aos-duration="1000">
-            Bantu Mereka
-          </button>
+          <div class="flex justify-center text-[14px]">
+            <p class="text-[#2d2d2d] text-[14px] w-[80%] font-light md:w-[300px] lg:w-[350px] xl:w-[400px] md:text-[14px] 2xl:text-[20px] 2xl:w-[530px]"
+              data-aos="fade-left" data-aos-duration="1500">
+              Cloubee menyediakan fitur untuk membuka donasi bagi mereka yang
+              membutuhkan melalui platform yang tersedia dan terpercaya.
+            </p>
+          </div>
+          <div class="hidden md:block">
+            <button
+              class="btn btn-shadow font-thin text-white md:py-2 md:px-6 2xl:py-4 2xl:px-8 bg-[#0D9276] rounded-2xl cursor-pointer btn-shadow:hover hover:bg-black hover:color-white hover:scale-105 hover:shadow-xl"
+              data-aos="fade-up" data-aos-duration="1000">
+              Bantu Mereka
+            </button>
+          </div>
+          <div>
+            <button
+              class="md:hidden w-[80%] btn btn-shadow font-thin text-white py-2 md:py-2 md:px-6 2xl:py-4 2xl:px-8 bg-[#0D9276] rounded-2xl cursor-pointer btn-shadow:hover hover:bg-black hover:color-white hover:scale-105 hover:shadow-xl"
+              data-aos="fade-up" data-aos-duration="1000">
+              Bantu Mereka
+            </button>
+          </div>
         </div>
-        <div class="flex flex-col md:relative md:right-[100px] lg:right-[50px] xl:right-[-200px] 2xl:right-[0]">
+        <div
+          class="flex flex-col items-center w-full relative right-20 md:right-[-50px] lg:right-[200px] xl:right-[-200px] 2xl:right-[-380px]">
           <div class="img-1" data-aos="fade-right" data-aos-duration="2000">
             <img
-              class="rounded-md shadow-sm shadow-black md:relative top-20 md:top-10 md:right-[100px] lg:right-[200px] xl:right-[400px] z-10 hover:shadow-xl animation duration-!200 md:w-[200px] md:h-[100px] lg:w-[280px] lg:h-[150px] xl:w-[380px] xl:h-[200px] 2xl:w-![405px] 2xl:!h-auto"
+              class="rounded-md shadow-sm shadow-black w-[300px] h-[150px] relative top-10 lg:right-[-100px] md:top-10 md:right-[150px] xl:right-[200px] 2xl:right-[400px] z-10 hover:shadow-xl animation duration-!200 md:w-[250px] md:h-[120px] lg:w-[280px] lg:h-[150px] xl:w-[380px] xl:h-[200px] 2xl:w-![405px] 2xl:!h-auto"
               src="https://images.tokopedia.net/blog-tokopedia-com/uploads/2019/11/anak-miskin.jpg" alt="Tokopedia.com"
               data-aos="fade-down" data-aos-duration="1000" />
           </div>
           <div class="img-2 mb-20" data-aos="fade-left" data-aos-duration="1500">
             <img
-              class="rounded-md shadow-sm shadow-black md:relative z-20 xl:right-40 2xl:!right-20 hover:shadow-xl animation h-![200px] md:w-[200px] md:h-[100px] lg:w-[280px] lg:h-[150px] xl:w-[300px] xl:h-[200px] 2xl:w-[380px] 2xl:h-auto"
+              class="rounded-md shadow-sm shadow-black w-[300px] h-[160px] left-[200px] relative z-20 md:left-0 md:-right-12 lg:left-[300px] xl:left-[0px] 2xl:-left-20 hover:shadow-xl animation md:w-[250px] md:h-[130px] lg:w-[280px] lg:h-[150px] xl:w-[300px] xl:h-[200px] 2xl:w-[380px] 2xl:h-[220px]"
               src="https://papuansphoto.files.wordpress.com/2016/08/fb_img_1471855855322.jpg"
               alt="Papuansphoto.wordpress.com" />
           </div>
@@ -105,7 +151,8 @@
     <!-- Lembaga Donasi -->
     <section class="pb-40">
       <center>
-        <h1 class="judul xl:text-[28px] 2xl:text-[36px] my-20" data-aos="fade-up" data-aos-duration="1000">
+        <h1 class="judul text-[20px] md:text-[24px] lg:text-[26px] xl:text-[28px] 2xl:text-[36px] my-20"
+          data-aos="fade-up" data-aos-duration="1000">
           Lembaga <span class="text-[#0D9276]">Donasi</span>
         </h1>
       </center>
@@ -113,49 +160,65 @@
       <!-- Marquee Animation -->
       <div id="latest-news" class="marquee">
         <span style="white-space: nowrap">
-          <div class=" flex flex-row items-center lg:!gap-[30px] xl:!gap-[100px] 2xl:gap-[188px]">
+          <div
+            class="flex flex-row items-center gap-20 md:text-[12px] lg:text-[14px] lg:!gap-[30px] xl:!gap-[100px] 2xl:gap-[188px]">
             <a href="https://kitabisa.com" target="_blank"
-              class="flex flex-row items-center gap-10 cursor-pointer">
-              <img src="../assets/img/logo-lembaga/logo-kitabisa.png" alt="Kitabisa.com" width="50" height="50" />
-              <p class="">Kitabisa</p>
+              class="flex flex-col text-center items-center gap-3 cursor-pointer justify-center ml-20 lg:ml-0 lg:flex-row">
+              <img src="../assets/img/logo-lembaga/logo-kitabisa.png" alt="Kitabisa.com" width="50" height="50"
+                class="hidden lg:block" />
+              <img src="../assets/img/logo-lembaga/logo-kitabisa.png" alt="Kitabisa.com" width="200" height="200"
+                class="lg:hidden" />
+              <p class="hidden lg:block">Kitabisa</p>
             </a>
             <a href="https://digital.dompetdhuafa.org/" target="_blank"
-              class=" flex flex-row items-center gap-10 w-[320px]">
-              <img src="../assets/img/logo-lembaga/logo-dompet-dhuafa.png" alt="" width="100" height="100" />
-              <p class="lg:w-[240px]">Dompet Dhuafa</p>
+              class=" flex flex-col text-center items-center gap-9 justify-center lg:flex-row">
+              <img src="../assets/img/logo-lembaga/logo-dompet-dhuafa.png" alt="" width="100" height="100"
+                class="hidden lg:block" />
+              <img src="../assets/img/logo-lembaga/logo-dompet-dhuafa.png" alt="digital.dompetdhuafa.org" width="400"
+                height="400" class="lg:hidden" />
+              <p class="hidden lg:block lg:w-[120px]">Dompet Dhuafa</p>
             </a>
             <a href="https://ayobantu.com" target="_blank"
-              class="flex flex-row items-center gap-10">
-              <img class="rounded-full" src="../assets/img/logo-lembaga/logo-ayobantu.png" alt="Ayobantu.com" width="50"
-                height="50" />
-              <p class="">Ayobantu</p>
+              class="flex flex-col text-center justify-center items-center gap-7 lg:flex-row">
+              <img class="hidden rounded-full lg:block" src="../assets/img/logo-lembaga/logo-ayobantu.png"
+                alt="Ayobantu.com" width="50" height="50" />
+              <img class="lg:hidden" src="../assets/img/logo-lembaga/mobile/Ayobantu.png" alt="Ayobantu.com" width="400"
+                height="400" />
+              <p class="hidden lg:block">Ayobantu</p>
             </a>
             <a href="https://atapkita.com" target="_blank"
-              class=" flex flex-row items-center gap-10">
-              <img src="../assets/img/logo-lembaga/logo-atapkita.png" alt="Atapkita.com" width="50" height="50" />
-              <p class="">Atapkita</p>
+              class="flex flex-col text-center justify-center items-center gap-9 lg:flex-row">
+              <img src="../assets/img/logo-lembaga/logo-atapkita.png" alt="Atapkita.com" width="50" height="50"
+                class="hidden lg:block" />
+              <img src="../assets/img/logo-lembaga/mobile/atapkita.png" alt="Atapkita.com" width="500" height="500"
+                class="lg:hidden" />
+              <p class="hidden lg:block">Atapkita</p>
             </a>
             <a href="https://baznas.go.id" target="_blank"
-              class=" flex flex-row items-center mr-20">
-              <img src="../assets/img/logo-lembaga/Logo_BAZNAS.png" alt="Baznas.go.id" width="100" height="100" />
-              <p class="">Baznas</p>
+              class="flex flex-col text-center justify-center items-center lg:mr-20 lg:flex-row">
+              <img src="../assets/img/logo-lembaga/Logo_BAZNAS.png" alt="Baznas.go.id" width="100" height="100"
+                class="hidden md:block" />
+              <img src="../assets/img/logo-lembaga/Logo_BAZNAS.png" alt="Baznas.go.id" width="400" height="400"
+                class="md:hidden" />
+              <p class="hidden lg:block">Baznas</p>
             </a>
           </div>
         </span>
       </div>
     </section>
-    <section id="tentang-kami" class="flex flex-row items-center bg-white justify-between 2xl:py-26">
-      <div class="bg-[#0D9276] lg:px-20 lg:py-40 xl:px-20 xl:py-40 2xl:px-60 2xl:py-60">
-        <h1 class="judul lg:text-[24px] xl:text-[28px] 2xl:text-[36px] text-white" data-aos="fade-up"
+    <section id="tentang-kami" class="flex flex-row items-center bg-white 2xl:py-26">
+      <div
+        class="bg-[#0D9276] md:px-20 md:py-40 lg:px-20 lg:py-40 xl:px-20 xl:py-40 2xl:px-60 2xl:py-60 hidden md:block">
+        <h1 class="judul md:text-[20px] lg:text-[24px] xl:text-[28px] 2xl:text-[36px] text-white" data-aos="fade-up"
           data-aos-duration="1000">
           <span class="text-[#1EDB6A]">Tentang </span>Kami
         </h1>
-        <h3 class="2xl:w-[500px] lg:text-[18px] xl:text-[24px] text-white font-light" data-aos="fade-up"
+        <h3 class="2xl:w-[500px] lg:text-[18px] xl:text-[24px] md:text-[16px] text-white font-light" data-aos="fade-up"
           data-aos-duration="1500">
           Cloubee membantu orang yang ingin berdonasi bagi masyarakat yang
           membutuhkan
         </h3>
-        <div class="flex flex-col text-white font-light lg:mt-10 xl:mt-10 gap-5">
+        <div class="flex flex-col text-white font-light md:text-[14px] md:mt-5 lg:mt-10 xl:mt-10 gap-5 ">
           <div class="flex flex-row items-center gap-2" . data-aos="fade-up" data-aos-duration="2000">
             <img src="../assets/img/ceklist.svg" alt="ceklis" width="30" height="30" />
             <p>Membuat penggalangan dana lebih mudah</p>
@@ -173,8 +236,39 @@
           </div>
         </div>
       </div>
-      <div class="flex flex-col justify-center items-center" data-aos="fade-left" data-aos-duration="2000">
+      <div class="flex flex-col justify-center items-center 2xl:w-[1500px] hidden md:block" data-aos="fade-left"
+        data-aos-duration="2000">
         <img src="../assets/img/donasi.svg" alt="donasi" />
+      </div>
+    </section>
+    <section id="tentang-kami"
+      class="md:hidden bg-[#0D9276] h-auto flex flex-col items-center justify-center px-10 py-20">
+      <div class="flex flex-col justify-center items-center">
+        <img src="../assets/img/section-mobile/donasi.svg" alt="donasi">
+        <div>
+          <h1 class="judul text-center text-[24px] text-white">
+            <span class="text-[#25F177]">Tentang</span>
+            Kami
+          </h1>
+          <div class="flex flex-col justify-center items-center">
+            <p class="text-center text-[16px] font-light text-white mt-5 w-[80%]">Cloubee membantu orang yang ingin
+              berdonasi bagi masyarakat yang membutuhkan </p>
+          </div>
+          <div class="flex flex-col text-white font-light mt-5 ml-10 text-[16px] gap-4">
+            <div class="flex flex-row items-center gap-5">
+              <img src="../assets/img/ceklist.svg" alt="ceklist">
+              <p>Mempermudah pengguna agar <br> berdonasi di lembaga donasi <br> terpercaya</p>
+            </div>
+            <div class="flex flex-row items-center gap-5">
+              <img src="../assets/img/ceklist.svg" alt="ceklist">
+              <p>Menghubungkan pengguna <br> langsung ke platform donasi hanya <br> sekali klik</p>
+            </div>
+            <div class="flex flex-row items-center gap-5">
+              <img src="../assets/img/ceklist.svg" alt="ceklist">
+              <p>Menginformasikan masyarakat yang <br> membutuhkan</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
